hopefully google sign in is fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>Contraseña</p>
             <input type="password" id="pass" name="" placeholder="Ingresar Contraseña">
             <button type="button" onclick="guardarLogin(user.value, pass.value);">
-              Ingresar </button></br>
+              Login </button></br>
             <a href="#">Perdiste tu contraseña?</a></br>
             <a href="#">No tienes una cuenta?</a>
         </form>
