--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
     <script>
       function onSign(googleUser) {
-        var profile= googleUser.getBasicProfile();
+        //var profile= googleUser.getBasicProfile();
 
-        window.location.replace = "main.html"
       }
     </script>
     <!---->
