segundo intento de agregar sign out

--- a/login.html
+++ b/login.html
@@ -23,13 +23,15 @@
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
-    <script>
-      function signOut() {
-      var auth2 = gapi.auth2.getAuthInstance();
-      auth2.signOut().then(function () {
-        alert( "Usuario desconectado");
-      })};
-    </script>
+      <a href="#" onclick="signOut();">Sign out</a>
+<script>
+  function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      console.log('User signed out.');
+    });
+  }
+</script>
     <main role="main">
       <section class="jumbotron text-center">
         <div class="m-5">
