--- a/login.html
+++ b/login.html
@@ -23,18 +23,10 @@
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
-      <a href="#" onclick="signOut();">Sign out</a>
-<script>
-  function signOut() {
-    var auth2 = gapi.auth2.getAuthInstance();
-    auth2.signOut().then(function () {
-      console.log('User signed out.');
-    });
-  }
-</script>
     <main role="main">
       <section class="jumbotron text-center">
         <div class="m-5">
+          <a href="#" onclick="signOut();">Sign out</a>
           <h1></h1>
         </div>
       </section>
@@ -114,5 +106,6 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
