"agregada funcionalidad para ordenar por ascendente, descendente y rango de precio"

--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
                       <label class="btn btn-light" id="sortDesc" >
                           <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up mr-1"></i>$$
                       </label>
-                      <label class="btn btn-light" id="sortByCount" >
+                      <label class="btn btn-light" id="sortBySold" >
                           <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Rel.
                       </label>
                   </div>
@@ -68,7 +68,7 @@
           </div>
     <div class="container">
       <div class="row">
-          <div class="list-group" id="cat-list-contain">
+          <div class="list-group" id="cat-list-container">
           </div>
       </div>
   </div>
