--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <input type="text" id="user" name="" placeholder="Ingresar Usuario">
             <p>Contraseña</p>
             <input type="password" id="pass" name="" placeholder="Ingresar Contraseña">
-            <button type="button" class="button" onclick="guardarLogin(user.value, pass.value);">
-              Login </button></br>
+            <button type="button" class="button" onclick="saveLogin(user.value, pass.value);"> Login </button></br>
             <!--boton de sign in de google-->
               <div class="g-signin2" data-onsuccess="onSignIn"></div>
             <!---->
