"cambiada algunas lineas y agregado un campo para buscar que aun no funciona"

--- a/products.html
+++ b/products.html
@@ -51,6 +51,7 @@
                       <label class="btn btn-light" id="sortBySold" >
                           <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Rel.
                       </label>
+                      <input type="search" id="searcher" placeholder="Buscar">
                   </div>
               </div>
           </div>
