--- a/my-profile.html
+++ b/my-profile.html
@@ -40,10 +40,19 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       <!--inicio del campo que muestra el nombre de usuario y boton para desloguear-->
-      <a class="py-2 d-none d-md-inline-block" id="user" style="color:white;"></a>
-      <button id="logout" onclick="localStorage.clear(); alert('User disconected'); location.href='index.html';">Sign out</a></button> <!--boton sign out-->
+      <div class="dropdown">
+        <button id="user" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+        <div class="dropdown-menu" aria-labelledby="my-dropdown">
+          <a class="dropdown-item active" href="cart.html">Mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
+          <a class="dropdown-item" href="#" id="logout" onclick="localStorage.clear(); alert('User disconected'); location.href='index.html';">Sign out</a>
+        </div>
+      </div>
+      
+
+      <!--<a class="py-2 d-none d-md-inline-block" id="user" style="color:white;"></a>-->
+      <!--<button id="logout" onclick="localStorage.clear(); alert('User disconected'); location.href='index.html';">Sign out</a></button> --> <!--boton sign out-->
     </div>
   </nav>
 <script>
