"Terminada la entega 4 sin el desafiate"

--- a/product-info.html
+++ b/product-info.html
@@ -147,12 +147,12 @@ document.getElementById('user').innerHTML=user;
           <div class="row col-12">
             <dt>Productos relacionados</dt>
             <dd>
-            <p> Aquí van las imágenes relacionadas al producto según sus identificadores </p>
-            <br><br>
+              <div class="row" id="relatedProds">
 
-            <div class="row">
-              <div class="list-group" id="cat-list-container">
               </div>
+              <hr class="my-3">
+            </dd>
+
             <!--imagen del producto-->
             <div class="row text-center" id="productImgSrc"></div>
 
@@ -166,7 +166,7 @@ document.getElementById('user').innerHTML=user;
           </div>
         </div>
       </div>
-
+    </main> 
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
