--- a/categories.html
+++ b/categories.html
@@ -41,6 +41,7 @@
                   <div class="dropdown-menu" aria-labelledby="my-dropdown">
                     <a class="dropdown-item active" href="cart.html">Mi carrito</a>
                     <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="index.html" id="logout" onclick="localStorage.clear(); alert('User disconected'); location.href='index.html';">Sign out</a>
                   </div>
                 </div>
