--- a/products.html
+++ b/products.html
@@ -39,6 +39,7 @@
                   <div class="dropdown-menu" aria-labelledby="my-dropdown">
                     <a class="dropdown-item active" href="cart.html">Mi carrito</a>
                     <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="index.html" id="logout" onclick="localStorage.clear(); alert('User disconected'); location.href='index.html';">Sign out</a>
                   </div>
                 </div>
@@ -103,7 +104,7 @@ document.getElementById('user').innerHTML=user;
           <div class="card-deck" id="cat-list-container">
           </div>
       </div>
-  </div>
+    </div>
     <footer class="text-muted bg-light">
       <div class="container">
         <p class="float-right">
