--- a/my-profile.html
+++ b/my-profile.html
@@ -79,6 +79,7 @@ document.getElementById('user').innerHTML=user;
 <div class="container">
   <div class="row row-content">
     <div class="col-4">
+      <h1>Imagen de perfil</h1>
         <h2>Input</h2>  
         <form class="input-group" id="img2b64">
             <input 
