--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="password" id="pass" name="" placeholder="Ingresar Contraseña">
             <button type="button" class="button" onclick="saveLogin(user.value, pass.value);"> Login </button></br>
             <!--boton de sign in de google-->
-              <div class="g-signin2" data-onsuccess="onSignIn"></div>
+              <div class="g-signin2" data-onsuccess="onSignIn;"></div>
             <!---->
             <a href="#">Perdiste tu contraseña?</a></br>
             <a href="#">No tienes una cuenta?</a>
